Additional tweaks to fadeing of images.
Migrated to use of TransitionalDrawable and setting crossfade to to true
to handle image transitions smoother.  Still some code refactoring to do
but for now it works and unit tests need to be fixed.

--- a/serenity-app/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser.xml
@@ -12,6 +12,11 @@
         android:id="@+id/movieBrowserBackgroundLayout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
+        
+        <ImageView android:id="@+id/fanArt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+         />
 
         <RelativeLayout
             android:id="@+id/video_details_container"
