--- a/serenity-app/res/layout-large/activity_tvbrowser_show_seasons.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_seasons.xml
@@ -10,8 +10,12 @@
         xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
         android:id="@+id/tvshowSeasonBrowserLayout"
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/tvshows" >
+        android:layout_height="match_parent" >
+
+        <ImageView
+            android:id="@+id/fanArt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <com.jess.ui.TwoWayGridView
             xmlns:app="http://schemas.android.com/apk/res-auto"
