--- a/serenity-app/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
@@ -14,6 +14,11 @@
         android:layout_height="match_parent"
         android:background="@drawable/tvshows" >
 
+        <ImageView
+            android:id="@+id/fanArt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
         <com.jess.ui.TwoWayGridView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/tvShowGridView"
