--- a/serenity-app/res/layout-large/activity_tvbrowser_show_posters.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_posters.xml
@@ -13,6 +13,11 @@
         android:layout_height="match_parent"
         android:background="@drawable/tvshows" >
 
+        <ImageView
+            android:id="@+id/fanArt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
         <RelativeLayout
             android:id="@+id/video_details_container"
             android:layout_width="fill_parent"
@@ -101,20 +106,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true" 
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dip"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dip"
-            android:layout_marginBottom="5dp"
-            android:gravity="bottom"
             android:background="#A0000000"
+            android:gravity="bottom"
             android:orientation="vertical" >
 
             <us.nineworlds.serenity.widgets.SerenityGallery
                 android:id="@+id/tvShowBannerGallery"
                 android:layout_width="match_parent"
-                android:layout_gravity="center|center_vertical"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_vertical" >
 
                 <requestFocus />
             </us.nineworlds.serenity.widgets.SerenityGallery>
