--- a/serenity-app/res/layout-xlarge/activity_tvbrowser_show_posters.xml
+++ b/serenity-app/res/layout-xlarge/activity_tvbrowser_show_posters.xml
@@ -19,13 +19,18 @@
             android:orientation="vertical"
             tools:context=".ui.browser.tv.TVShowBrowserActivity" >
 
+            <ImageView
+                android:id="@+id/fanArt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
             <RelativeLayout
                 android:id="@+id/video_details_container"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:background="#A0000000"
                 android:layout_marginTop="@dimen/actionbarMargin"
+                android:background="#A0000000"
                 android:padding="5dp" >
 
                 <us.nineworlds.serenity.widgets.RoundedImageView
@@ -125,9 +130,7 @@
             </LinearLayout>
         </RelativeLayout>
 
-        <include layout="@layout/menu_drawer_with_navigation"/>
-        
-        
+        <include layout="@layout/menu_drawer_with_navigation" />
     </us.nineworlds.serenity.widgets.DrawerLayout>
 
 </merge>
