--- a/serenity-app/res/layout-large/video_playback.xml
+++ b/serenity-app/res/layout-large/video_playback.xml
@@ -18,9 +18,10 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:gravity="center"
+        android:textSize="32sp"
         android:layout_centerHorizontal="true"
         android:visibility="invisible"
-        style="@android:style/TextAppearance.Large"/>
+        style="@android:style/TextAppearance.Holo.Large"/>
 
     <us.nineworlds.serenity.ui.views.TextClock
             android:id="@+id/time_of_day"
