--- a/serenity-app/res/layout-xlarge/activity_movie_browser.xml
+++ b/serenity-app/res/layout-xlarge/activity_movie_browser.xml
@@ -103,30 +103,12 @@
                 </LinearLayout>
             </RelativeLayout>
 
-            <LinearLayout
-                android:id="@+id/tableRow2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dip"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dip"
-                android:background="#A0000000"
-                android:gravity="bottom"
-                android:padding="5dp" >
-
-                <us.nineworlds.serenity.widgets.SerenityGallery
-                    android:id="@+id/moviePosterGallery"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center|center_vertical"
-                    android:nextFocusUp="@+id/categoryFilter"
-                    android:spacing="25dp" >
-
-                    <requestFocus />
-                </us.nineworlds.serenity.widgets.SerenityGallery>
-            </LinearLayout>
+        <fragment android:id="@+id/galleryFragmentContainer"
+            android:name="us.nineworlds.serenity.fragments.VideoGalleryFragment"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+        />
         </RelativeLayout>
 
         <include layout="@layout/menu_drawer_with_navigation" />
