--- a/serenity-app/res/layout-xlarge/activity_movie_browser_gridview.xml
+++ b/serenity-app/res/layout-xlarge/activity_movie_browser_gridview.xml
@@ -20,31 +20,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <com.jess.ui.TwoWayGridView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/movieGridView"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+        <fragment android:id="@+id/galleryFragmentContainer"
+            android:name="us.nineworlds.serenity.fragments.VideoGridFragment"
             android:layout_centerHorizontal="true"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="@dimen/actionbarMargin"
-            android:background="@color/card_background"
-            android:focusable="true"
-            android:nextFocusDown="@+id/movieGridView"
-            android:nextFocusLeft="@+id/movieGridView"
-            android:nextFocusRight="@+id/movieGridView"
-            android:padding="5dp"
-            app:cacheColorHint="#E8E8E8"
-            app:columnWidth="160dp"
-            app:gravity="center"
-            app:horizontalSpacing="20dp"
-            app:numColumns="auto_fit"
-            app:numRows="3"
-            app:rowHeight="230dp"
-            app:scrollDirectionLandscape="horizontal"
-            app:scrollDirectionPortrait="vertical"
-            app:stretchMode="spacingWidthUniform"
-            app:verticalSpacing="5dp" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+        />
+        
     </RelativeLayout>
 
     <!-- The navigation drawer -->
