--- a/serenity-app/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser.xml
@@ -18,98 +18,29 @@
             android:layout_height="match_parent"
          />
 
-        <RelativeLayout
-            android:id="@+id/video_details_container"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="@dimen/actionbarMargin"
-            android:background="@color/card_background"
-            android:padding="5dp"
-            android:visibility="invisible" >
-
-            <us.nineworlds.serenity.widgets.RoundedImageView
-                android:id="@+id/video_poster"
-                android:layout_width="200dp"
-                android:layout_height="250dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_margin="5dp"
-                app:corner_radius="5dp"
-                app:mutate_background="true" />
-
-            <TextView
-                android:id="@+id/movieBrowserPosterTitle"
-                style="@android:style/TextAppearance.Holo.Large"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_toRightOf="@+id/video_poster"
-                android:gravity="left|center_vertical"
-                android:paddingLeft="10dp"
-                android:paddingRight="0dp"
-                android:textColor="#F0F0F0"
-                android:textStyle="bold"
-                tools:ignore="SelectableText" />
-
-            <TextView
-                android:id="@+id/movieSummary"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/movieBrowserPosterTitle"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_toRightOf="@+id/video_poster"
-                android:ellipsize="marquee"
-                android:maxLines="8"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:textColor="#F0F0F0"
-                android:textSize="17.5sp"
-                tools:ignore="SelectableText" />
-
-            <TextView
-                android:id="@+id/videoTextExtra"
-                style="@android:style/TextAppearance.Holo.Medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/movieInfoGraphicLayout"
-                android:layout_gravity="left"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_toRightOf="@+id/video_poster"
-                android:gravity="left"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:textStyle="bold"
-                android:visibility="invisible" />
-
-            <LinearLayout
-                android:id="@+id/movieInfoGraphicLayout"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/video_poster"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="5dp"
-                android:layout_toRightOf="@+id/video_poster"
-                android:gravity="bottom"
-                android:orientation="horizontal" >
-            </LinearLayout>
-        </RelativeLayout>
-        
-        <fragment android:id="@+id/galleryFragmentContainer"
+        <fragment
+            android:id="@+id/galleryFragmentContainer"
             android:name="us.nineworlds.serenity.fragments.VideoGalleryFragment"
-            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:tag="videoGallery_fragment"
+            android:layout_alignParentBottom="true" />
+        
+        <fragment android:id="@+id/gridFragmentContainer"
+            android:name="us.nineworlds.serenity.fragments.VideoGridFragment"
+            android:layout_centerHorizontal="true"
+            android:tag="videoGrid_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/actionbarMargin"
         />
-
+        
+        
+        
     </RelativeLayout>
-    
+
     <!-- The navigation drawer -->
-	<include layout="@layout/menu_drawer_with_navigation"/>
+
+    <include layout="@layout/menu_drawer_with_navigation" />
 
 </us.nineworlds.serenity.widgets.DrawerLayout>
