Issue #285: Fix Episode Browser so that it uses a Fragment
With the changes to the Movie Details screen to use a fragment, the episode
browser needed to change as well to use its own fragment.  Also fix issue
with force closing when returning to a MultiVideoView activity.

--- a/serenity-app/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
@@ -27,6 +27,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginRight="10dp"
             android:layout_marginTop="@dimen/actionbarMargin"
+            android:layout_marginBottom="5dp"
             android:background="@color/card_background"
             android:focusable="true"
             android:nextFocusDown="@+id/tvShowGridView"
