use selectors for changing text color on menu

--- a/serenity-app/src/main/res/layout-large/main_menu_view.xml
+++ b/serenity-app/src/main/res/layout-large/main_menu_view.xml
@@ -3,19 +3,21 @@
                                                  xmlns:app="http://schemas.android.com/apk/res-auto"
                                                  android:id="@+id/relectionArea"
                                                  android:layout_width="fill_parent"
-                                                 android:layout_height="80dp"
+                                                 android:layout_height="90dp"
+                                                 android:padding="5dp"
                                                  android:layout_centerInParent="true"
-                                                 android:layout_marginBottom="10dp"
                                                  android:background="@drawable/content_panel_dark">
 
     <net.ganin.darv.DpadAwareRecyclerView
             android:id="@+id/mainGalleryMenu"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:paddingLeft="5dp"
             app:selectorVelocity="1000"
             app:smoothScrolling="true"
-            app:foregroundSelector="@drawable/main_menu_item_foreground_selector"
-            android:nextFocusDown="@+id/mainGalleryMenu"
+            app:backgroundSelector="@drawable/main_menu_item_foreground_selector"
             android:nextFocusUp="@+id/menu_button"/>
 
 </us.nineworlds.serenity.widgets.ReflectingLayout>
