--- a/serenity-app/src/main/res/layout-large/item_mainmenu.xml
+++ b/serenity-app/src/main/res/layout-large/item_mainmenu.xml
@@ -7,7 +7,7 @@
     <TextView android:id="@+id/main_menu_item"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:textColor="@android:color/white"
+              android:textColor="@color/main_menu_text_color_selector"
               android:padding="10dp"
               android:duplicateParentState="true"
      />
