--- a/serenity-app/src/main/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/src/main/res/layout-large/activity_movie_browser.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -8,10 +7,9 @@
     <!-- The main content view -->
 
     <RelativeLayout
-        xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
         android:id="@+id/movieBrowserBackgroundLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
         
         <ImageView android:id="@+id/fanArt"
             android:layout_width="match_parent"
@@ -32,11 +30,10 @@
             android:tag="videoGrid_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_marginTop="@dimen/actionbarMargin"
         />
-        
-        
-        
+
     </RelativeLayout>
 
     <!-- The navigation drawer -->
