--- a/serenity-app/src/main/res/values/dimens.xml
+++ b/serenity-app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="small_image">100dp</dimen>
     <dimen name="actionbarMargin">60dp</dimen>
+    <dimen name="horizontal_spacing">25dp</dimen>
 </resources>
