additional tweaks to the grid layout spacing.

--- a/serenity-app/src/main/res/values/dimens.xml
+++ b/serenity-app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="small_image">100dp</dimen>
     <dimen name="actionbarMargin">60dp</dimen>
     <dimen name="horizontal_spacing">25dp</dimen>
+    <dimen name="grid_spacing_dimen">10dp</dimen>
 </resources>
