--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
@@ -1,5 +1,4 @@
 <us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -8,7 +7,6 @@
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/tvshowBrowserLayout"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
@@ -19,32 +17,27 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <com.jess.ui.TwoWayGridView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/tvShowGridView"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="@dimen/actionbarMargin"
-            android:layout_marginBottom="5dp"
-            android:background="@color/card_background"
-            android:focusable="true"
-            android:nextFocusDown="@+id/tvShowGridView"
-            android:nextFocusLeft="@+id/tvShowGridView"
-            android:nextFocusRight="@+id/tvShowGridView"
-            android:padding="5dp"
-            app:cacheColorHint="#E8E8E8"
-            app:columnWidth="160dp"
-            app:gravity="center"
-            app:horizontalSpacing="16dp"
-            app:numColumns="auto_fit"
-            app:numRows="3"
-            app:rowHeight="160dp"
-            app:scrollDirectionLandscape="horizontal"
-            app:scrollDirectionPortrait="vertical"
-            app:stretchMode="spacingWidthUniform"
-            app:verticalSpacing="10dp" />
+        <FrameLayout android:layout_width="match_parent"
+                     android:layout_height="match_parent"
+                     android:layout_marginRight="10dp"
+                     android:layout_marginTop="@dimen/actionbarMargin"
+                     android:layout_marginBottom="5dp"
+                     xmlns:android="http://schemas.android.com/apk/res/android">
+            <net.ganin.darv.DpadAwareRecyclerView
+                    android:id="@+id/tvShowGridView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:selectorVelocity="1000"
+                    app:smoothScrolling="true"
+                    android:background="@color/card_background"
+                    android:visibility="visible"
+                    android:layout_marginBottom="5dp"
+                    app:backgroundSelector="@drawable/main_menu_item_foreground_selector"
+                    xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
+                    xmlns:android="http://schemas.android.com/apk/res/android">
+                <requestFocus/>
+            </net.ganin.darv.DpadAwareRecyclerView>
+        </FrameLayout>
     </RelativeLayout>
 
     <include layout="@layout/menu_drawer_with_navigation" />
