Initial conversion of Seasons and Episodes to Dpadaware Recycler
This converts the application so that it uses Dpadaware Recycler
in the seasons and episodes.  Long Click support is currently not
implemented.

--- a/serenity-app/src/main/res/layout-large/activity_episode_browser.xml
+++ b/serenity-app/src/main/res/layout-large/activity_episode_browser.xml
@@ -21,6 +21,7 @@
         <fragment
             android:id="@+id/galleryFragmentContainer"
             android:name="us.nineworlds.serenity.fragments.EpisodeVideoGalleryFragment"
+            android:layout_marginTop="@dimen/actionbarMargin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:tag="videoGallery_fragment"
