Fix spacing issue in seasons browser in grid

--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_seasons.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_seasons.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
         android:id="@+id/tvshowSeasonBrowserLayout"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
         <ImageView
@@ -19,8 +19,8 @@
 
         <net.ganin.darv.DpadAwareRecyclerView
             android:id="@+id/episodeGridView"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_above="@+id/tvShowSeasonTitleRow"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="4dp"
