--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_banners.xml
@@ -1,6 +1,6 @@
 <us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -60,7 +60,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:numStars="4"
-                    android:stepSize="0.1"></RatingBar>
+                    android:stepSize="0.1"/>
 
                 <ImageView
                     android:id="@+id/tvShowStudio"
@@ -122,7 +122,7 @@
                 android:nextFocusUp="@+id/categoryFilter"
                 app:selectorVelocity="2000"
                 app:smoothScrolling="true"
-                app:backgroundSelector="@drawable/main_menu_item_foreground_selector">
+                app:foregroundSelector="@drawable/main_menu_item_foreground_selector">
 
                 <requestFocus />
             </net.ganin.darv.DpadAwareRecyclerView>
