--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_seasons.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_seasons.xml
@@ -33,7 +33,7 @@
             android:visibility="gone"
             app:selectorVelocity="2000"
             app:smoothScrolling="true"
-            app:backgroundSelector="@drawable/main_menu_item_foreground_selector" />
+            app:foregroundSelector="@drawable/main_menu_item_foreground_selector" />
 
         <LinearLayout
             android:id="@+id/tvShowSeasonTitleRow"
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColor="#F0F0F0"
-                tools:ignore="SelectableText"></TextView>
+                tools:ignore="SelectableText"/>
         </LinearLayout>
 
         <LinearLayout
@@ -70,7 +70,7 @@
                 android:padding="5dp"
                 app:selectorVelocity="2000"
                 app:smoothScrolling="true"
-                app:backgroundSelector="@drawable/main_menu_item_foreground_selector">
+                app:foregroundSelector="@drawable/main_menu_item_foreground_selector">
 
                 <requestFocus />
             </net.ganin.darv.DpadAwareRecyclerView>
