--- a/serenity-app/src/main/res/layout-large/video_grid_fragment.xml
+++ b/serenity-app/src/main/res/layout-large/video_grid_fragment.xml
@@ -12,7 +12,7 @@
         android:background="@color/card_background"
         android:visibility="visible"
         android:layout_marginBottom="5dp"
-        app:backgroundSelector="@drawable/main_menu_item_foreground_selector"
+        app:foregroundSelector="@drawable/main_menu_item_foreground_selector"
         xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
