--- a/serenity-app/src/main/res/values/styles.xml
+++ b/serenity-app/src/main/res/values/styles.xml
@@ -29,6 +29,7 @@
 
   <style name="Theme.AppCompat.NoActionBar" parent="@style/Theme.AppCompat">
     <item name="android:windowNoTitle">true</item>
+    <item name="windowNoTitle">true</item>
   </style>
 
   <!-- Application theme. -->
