--- a/serenity-app/src/main/res/layout/activity_exoplayer_video.xml
+++ b/serenity-app/src/main/res/layout/activity_exoplayer_video.xml
@@ -3,6 +3,7 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     android:keepScreenOn="true">
 
   <com.google.android.exoplayer2.ui.SimpleExoPlayerView
