--- a/serenity-app/src/main/res/values/styles.xml
+++ b/serenity-app/src/main/res/values/styles.xml
@@ -61,4 +61,11 @@
     <item name="android:windowEnterAnimation">@anim/fade_in_mediacontroller</item>
     <item name="android:windowExitAnimation">@anim/fade_out_mediacontroller</item>
   </style>
+
+  <style name="Theme.AppCompat.NoActionBar.FullScreen" parent="@style/Theme.AppCompat.NoActionBar">
+    <item name="windowNoTitle">true</item>
+    <item name="windowActionBar">false</item>
+    <item name="android:windowFullscreen">true</item>
+    <item name="android:windowContentOverlay">@null</item>
+  </style>
 </resources>
