Make sure RecyclerView gets focus after any children it has.

--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_banners.xml
@@ -135,6 +135,7 @@
           app:selectorVelocity="2000"
           app:smoothScrolling="true"
           app:foregroundSelector="@drawable/main_menu_item_foreground_selector"
+          android:descendantFocusability="afterDescendants"
           >
 
         <requestFocus/>
