--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
@@ -37,7 +37,7 @@
           android:layout_marginBottom="5dp"
           app:foregroundSelector="@drawable/main_menu_item_foreground_selector"
           xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
-          xmlns:android="http://schemas.android.com/apk/res/android"
+          android:descendantFocusability="afterDescendants"
           >
 
         <requestFocus/>
