--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_posters.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_posters.xml
@@ -134,6 +134,7 @@
           app:selectorVelocity="1000"
           app:smoothScrolling="true"
           app:foregroundSelector="@drawable/main_menu_item_foreground_selector"
+          android:descendantFocusability="afterDescendants"
           >
 
         <requestFocus/>
