--- a/serenity-app/src/main/res/layout-large/video_grid_fragment.xml
+++ b/serenity-app/src/main/res/layout-large/video_grid_fragment.xml
@@ -16,6 +16,7 @@
       app:foregroundSelector="@drawable/main_menu_item_foreground_selector"
       xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
       xmlns:android="http://schemas.android.com/apk/res/android"
+      android:descendantFocusability="afterDescendants"
       >
 
     <requestFocus/>
