Adjust some options trying to improve focusability of the main menu

--- a/serenity-app/src/main/res/layout-large/item_mainmenu.xml
+++ b/serenity-app/src/main/res/layout-large/item_mainmenu.xml
@@ -4,6 +4,8 @@
     android:layout_height="wrap_content"
     android:focusable="true"
     android:clickable="true"
+
+    android:descendantFocusability="afterDescendants"
     >
 
   <TextView
