--- a/serenity-app/src/main/res/layout-large/main_menu_view.xml
+++ b/serenity-app/src/main/res/layout-large/main_menu_view.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<us.nineworlds.serenity.widgets.ReflectingLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/relectionArea"
-    android:layout_width="fill_parent"
-    android:layout_height="90dp"
-    android:padding="5dp"
-    android:layout_centerInParent="true"
-    android:background="@drawable/content_panel_dark"
-    >
 
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
+    android:background="@drawable/content_panel_dark"
+    android:layout_centerInParent="true"
+    >
   <net.ganin.darv.DpadAwareRecyclerView
       android:id="@+id/mainGalleryMenu"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_marginTop="5dp"
       android:layout_marginRight="5dp"
       android:layout_marginLeft="5dp"
       android:paddingLeft="5dp"
       app:selectorVelocity="1000"
+      android:focusableInTouchMode="true"
       app:smoothScrolling="true"
       app:backgroundSelector="@drawable/main_menu_item_foreground_selector"
       android:nextFocusUp="@+id/menu_button"
@@ -25,4 +26,5 @@
     <requestFocus/>
   </net.ganin.darv.DpadAwareRecyclerView>
 
-</us.nineworlds.serenity.widgets.ReflectingLayout>
+
+</FrameLayout>
