--- a/serenity-app/src/main/res/layout/menu_drawer_with_navigation.xml
+++ b/serenity-app/src/main/res/layout/menu_drawer_with_navigation.xml
@@ -31,6 +31,7 @@
       android:paddingLeft="5dp"
       android:drawableLeft="@drawable/ic_action_settings"
       android:focusable="true"
+      android:visibility="gone"
       android:gravity="center_vertical"
       android:text="Settings"
       android:textColor="@android:color/white"
