Add initial server screen for selection of Emby or Plex.
Server screen is populated and will ask you to select a server.
Eventually it should remember which server you selected and will
take you to the appropriate screen.

--- a/serenity-app/src/main/res/values/colors.xml
+++ b/serenity-app/src/main/res/values/colors.xml
@@ -26,4 +26,6 @@
 
   <color name="white">#F0F0F0</color>
   <color name="grey">#414141</color>
+  <color name="emby_green">#007800</color>
+  <color name="plex_orange">#E5A00D</color>
 </resources>
