--- a/serenity-app/src/main/res/values/dimens.xml
+++ b/serenity-app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
   <dimen name="actionbarMargin">60dp</dimen>
   <dimen name="horizontal_spacing">15dp</dimen>
   <dimen name="grid_spacing_dimen">5dp</dimen>
+  <dimen name="selector_border_radius">6dp</dimen>
 </resources>
