--- a/serenity-app/src/main/res/drawable/rounded_emby_green_corners.xml
+++ b/serenity-app/src/main/res/drawable/rounded_emby_green_corners.xml
@@ -2,10 +2,6 @@
     android:shape="rectangle"
     android:padding="10dp">
   <solid android:color="@color/emby_green"/>
-  <corners
-      android:bottomRightRadius="15dp"
-      android:bottomLeftRadius="15dp"
-      android:topLeftRadius="15dp"
-      android:topRightRadius="15dp"/>
+  <corners android:radius="@dimen/selector_border_radius"/>
 
 </shape>
