--- a/serenity-app/src/main/res/layout-large/item_user_profile.xml
+++ b/serenity-app/src/main/res/layout-large/item_user_profile.xml
@@ -4,9 +4,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="5dp"
+    android:layout_margin="10dp"
     android:focusable="true"
     android:background="@android:color/black"
-    android:layout_marginStart="10dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
